# ft_printf

./: CMakeLists.txt  Makefile  README.md  pf.c
inc/: ft_printf.h
libft/: .#ft_lstmap.  Makefile  ft_lstiter.c  ft_pf_write.c  ft_strlen.c  ft_strnchr.c  libft.h
libft copy/: .#ft_swap.c  1.c  Makefile  a.out  author  chars.c  conversions.c  ft_itoa_base.c  ft_len_u.c  ft_lstdel.c  ft_printf.c  ft_printf.h  ft_strlen.c  ft_strnchr.c  hash.c  lenght.c  numbers.c  pointers.c  precision_zeros.c  reading.c  sample.c  strings.c  test.c  unsignedconv.c  utf_str.c
src/: chars.c  conversions.c  ft_itoa_base.c  ft_len_u.c  ft_printf.c  hash.c  lenght.c  numbers.c  numbers2.c  pointers.c  precision_zeros.c  reading.c  strings.c  strings2.c  unsignedconv.c  utf_str.c
